- retrofit services testing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
+
+<!-- Posible theme colors   -->
+    <!-- background color   -->
+    <color name="mirage">#1c2135</color>
+    <color name="waikawa_gray">#5A6794</color>
+    <color name="wild_blue_yonder">#8794C0</color>
+    <!-- Text color  -->
+    <color name="athens_gray">#E7E9EE</color>
+    <!--    -->
+    <color name="akaroa">#D8CDB0</color>
+
 </resources>
