--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,8 +9,7 @@
             type="com.mwdevs.capstone.coins.data.remote.model.Payload" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -30,16 +30,57 @@
 
                 <TextView
                     android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="32dp"
-                    android:text="@{book_model.book}"
-                    android:textSize="16sp"
                     android:background="@color/transparent"
+                    android:paddingTop="32dp"
+                    android:paddingBottom="32dp"
+                    android:paddingEnd="32dp"
+                    android:paddingStart="16dp"
+                    android:text=""
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/iv_logo_minor"
                     app:layout_constraintTop_toTopOf="parent" />
+                <ImageView
+                    android:id="@+id/iv_logo_major"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_margin="16dp"
+                    android:background="@color/transparent"
+                    android:maxHeight="32dp"
+                    android:maxWidth="32dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_help_not_found"/>
+                <ImageView
+                    android:id="@+id/iv_arrow_right"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:background="@color/transparent"
+                    android:src="@drawable/ic_arrow_right"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_margin="2dp"
+                    app:tint="@color/white"
+                    app:layout_constraintEnd_toStartOf="@id/iv_logo_minor"
+                    app:layout_constraintStart_toEndOf="@id/iv_logo_major"
+                    />
+                <ImageView
+                    android:id="@+id/iv_logo_minor"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:background="@color/transparent"
+                    android:src="@drawable/ic_help_not_found"
+                    app:layout_constraintStart_toEndOf="@id/iv_arrow_right"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:padding="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
