--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Capstone" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Capstone" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/waikawa_gray</item>
         <item name="colorPrimaryDark">@color/mirage</item>
