- correcciones primer entregable pt1

--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="book_model"
-            type="com.mwdevs.capstone.coins.data.remote.model.Payload" />
+            type="com.mwdevs.capstone.coins.data.remote.model.BookDTO" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
